# video-encrypt

./: README.md  start.sh
decrypt/gst-plugin/: Makefile
decrypt/gst-plugin/src/: Makefile  Makefile.am  gstdecrypt.c  gstdecrypt.h  gstmyfilter.h  libgstdecrypt.la  libgstdecrypt_la-gstdecrypt.lo  libgstdecrypt_la-speck.lo  speck.c  speck.h  test  test.c
decrypt/gst-plugin/src/.deps/: libgstdecrypt_la-gstdecrypt.Plo  libgstdecrypt_la-speck.Plo
decrypt/gst-plugin/src/.libs/: libgstdecrypt.exp  libgstdecrypt.lai  libgstdecrypt.ver
doc/格式/: 6.毕业设计（论文）指导教师成绩评定意见表.docx  7.毕业设计（论文）评阅人成绩评定意见表.docx  8.毕业设计（论文）成绩登记表.docx  9.外文资料翻译封皮模板.doc
encrypt/gst-plugin/: Makefile  export.sh
encrypt/gst-plugin/src/: Makefile  Makefile.am  gstencrypt.c  gstencrypt.h  libgstencrypt.la  libgstencrypt_la-gstencrypt.lo  libgstencrypt_la-speck.lo  speck.c  speck.h
encrypt/gst-plugin/src/.deps/: libgstencrypt_la-gstencrypt.Plo  libgstencrypt_la-speck.Plo
encrypt/gst-plugin/src/.libs/: libgstencrypt.exp  libgstencrypt.lai  libgstencrypt.ver
gst-template-master/gst-plugin/src/: Makefile.am  gstmyfilter.c
watch/gst-plugin/: Makefile
watch/gst-plugin/src/: Makefile  Makefile.am  gstwatch.c  gstwatch.h  libgstwatch.la  libgstwatch_la-gstwatch.lo
watch/gst-plugin/src/.deps/: libgstwatch_la-gstwatch.Plo
watch/gst-plugin/src/.libs/: libgstwatch.exp  libgstwatch.lai  libgstwatch.ver
